Gave 404 page its own article.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
@@ -106,12 +106,6 @@ Now open a browser window and navigate to the app.
 
 TODO: SWA stuff goes here.
 
-## Pull request time!
+### Deploy
 
-  - Create the PR.
-  - Get approval.
-  - Complete the PR.
-  - Delete the now-unnecessary local feature branch and the remote branch.
-  - Pull `main` to local.
-
-
+Push, create a pull request, complete the pull request and delete the branches.
