Improved some meta documentation

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/044. Config service.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/044. Config service.md
@@ -1,13 +1,17 @@
 ---
 type: docs
-title: "Obtain the backend URL"
-linkTitle: "Obtain the backend URL"
-weight: 45
+title: "Config service"
+linkTitle: "Config service"
+weight: 44
 description: >
-  Who you gonna call?
+  Help your classes obtain your app's per-environment configuration.
 ---
 
-This stuff came from https://www.thisdot.co/blog/runtime-environment-configuration-with-angular
+{{% alert title="Credit where credit is due" color="info" %}}
+This approach came from
+Frederik Prijck's
+[Runtime environment configuration with Angular](https://www.thisdot.co/blog/runtime-environment-configuration-with-angular).
+{{% /alert %}}
 
 ## Overview
 
