--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/050. List the movies.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/050. List the movies.md
@@ -1,20 +1,119 @@
 ---
 type: docs
-title: "Quick list the movies"
-linkTitle: "Quick list the movies"
-weight: 46
+title: "List the movies"
+linkTitle: "List the movies"
+weight: 50
 description: >
-  This is temporary. This needs to be broken up into more steps.
+  List the movies.
 ---
 
-### Static Web Apps CLI start
+Create the branch `feature/list-the-movies`
+
+## Add the movie cache
+
+Note that this next class is really too complicated to cover for bootcamp, but
+that we want to have it anyway so that the screen doesn't refresh too often.
 
 ~~~
-swa start http://localhost:4200 --api fake-backend
+npx ng generate service core/singleton-services/backend/movies-cache
 ~~~
 
+...which may be abbreviated to...
 
-### Add the movie list
+~~~
+npx ng g service core/singleton-services/backend/movies-cache
+~~~
+
+At this point we'd inspect the changes made to:
+
+~~~
+src\app\core\singleton-services\backend\movies-cache.service.spec.ts
+src\app\core\singleton-services\backend\movies-cache.service.ts
+~~~
+
+Commit with comment "ng g service service movies-cache"
+
+`src\app\core\singleton-services\backend\movies-cache.service.spec.ts`
+~~~
+import { TestBed } from '@angular/core/testing';
+import { HttpClientTestingModule } from '@angular/common/http/testing';
+
+import { MoviesCacheService } from './movies-cache.service';
+
+describe('MoviesService', () => {
+  let service: MoviesCacheService;
+
+  beforeEach(() => {
+    TestBed.configureTestingModule({
+      imports: [HttpClientTestingModule],
+    });
+    service = TestBed.inject(MoviesCacheService);
+  });
+
+  it('should be created', () => {
+    expect(service).toBeTruthy();
+  });
+});
+~~~
+
+`src\app\core\singleton-services\backend\movies-cache.service.ts`
+~~~
+// Provides a cached list of Movies.
+// Follows technique from https://blog.thoughtram.io/angular/2018/03/05/advanced-caching-with-rxjs.html
+
+import { Injectable } from '@angular/core';
+import { Observable, Subject, timer } from 'rxjs';
+import { shareReplay, switchMap, takeUntil } from 'rxjs/operators';
+
+import { Movie } from './movie';
+import { BackendService } from './backend.service';
+
+const CACHE_SIZE = 1;
+const REFRESH_INTERVAL = 60 * 60 * 1000;
+
+@Injectable({
+  providedIn: 'root'
+})
+export class MoviesCacheService {
+  private cache$: any;
+  private reload$ = new Subject<void>();
+
+  constructor(
+    private backendService: BackendService
+  ) { }
+
+  get movies(): Observable<Movie[]> {
+    if (!this.cache$) {
+      const timer$ = timer(0, REFRESH_INTERVAL);
+
+      this.cache$ = timer$.pipe(
+        switchMap(() => this.requestMovies()),
+        takeUntil(this.reload$),
+        shareReplay(CACHE_SIZE)
+      );
+    }
+
+    return this.cache$;
+  }
+
+  forceReload(): void {
+    // Calling next will complete the current cache instance
+    this.reload$.next();
+
+    // Setting the cache to null will create a new cache the
+    // next time 'movies()' is called
+    this.cache$ = null;
+  }
+
+  private requestMovies(): Observable<Movie[]> {
+    return this.backendService.getMovies();
+  }
+}
+~~~
+
+Commit with comment "Cached movie list"
+
+## Add the movie list
 
 ~~~
 npx ng generate component areas/movies/pages/movie-list
@@ -58,44 +157,6 @@ export class AppRoutingModule { }
 ~~~
 
 Commit with comment "Movie list page appears"
-
-### Backend service
-
-~~~
-npx ng generate service core/singleton-services/backend/backend
-npx ng generate class core/singleton-services/backend/movie
-npx ng generate service core/singleton-services/backend/movies-cache
-~~~
-
-...which may be abbreviated to...
-
-~~~
-npx ng g service core/singleton-services/backend/backend
-npx ng g class core/singleton-services/backend/movie
-npx ng g service core/singleton-services/backend/movies-cache
-~~~
-
-At this point we'd inspect the changes made to:
-
-~~~
-src\app\core\singleton-services\backend\backend.service.spec.ts
-src\app\core\singleton-services\backend\backend.service.ts
-src\app\core\singleton-services\backend\movie.spec.ts
-src\app\core\singleton-services\backend\movie.ts
-src\app\core\singleton-services\backend\movies-cache.service.spec.ts
-src\app\core\singleton-services\backend\movies-cache.service.ts
-~~~
-
-Commit with comment "ng g service service backend, ng g class movie, ng g service service movies-cache"
-
-
-TODO: There's just a mess of changes that I put into the `bcfinal-theatermanagement-spa` microservice. Go there and look at them. Especially:
-
-~~~
-src\app\areas\movies\pages\movie-list\*
-src\app\core\singleton-services\backend\*
-src\environments\*
-~~~
 
 ## Deploy
 
