Old WIP on Pact.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
@@ -13,12 +13,14 @@ TODO: Describe all of this.
 
 src\app\pact\backend.pact.spec.ts
 ~~~
-import { PactWeb } from '@pact-foundation/pact-web';
+import { Matchers, PactWeb } from '@pact-foundation/pact-web';
+const { eachLike } = Matchers
 import { HttpClientModule } from '@angular/common/http';
 import { TestBed } from '@angular/core/testing';
 import { mockProvider } from '@ngneat/spectator';
 
 import { BackendService } from '../core/singleton-services/backend/backend.service';
+import { Movie } from '../core/singleton-services/backend/movie';
 import { ConfigService } from '../core/singleton-services/config/config.service';
 
 describe('BackendService consumer-defined contracts', () => {
@@ -40,57 +42,59 @@ describe('BackendService consumer-defined contracts', () => {
     jasmine.DEFAULT_TIMEOUT_INTERVAL = 1000000;
   });
 
-  beforeEach((done) => {
-    TestBed.configureTestingModule({
-      imports: [HttpClientModule],
-      providers: [
-        mockProvider(ConfigService, {
-          apiBaseUrl: 'http://localhost:1234/api'
-        }),
-        BackendService
-      ]
-    });
-    service = TestBed.inject(BackendService);
-    provider
-      .addInteraction(
-        {
-          state: "There are no movies",
-          uponReceiving: "a request to list the movies",
-          withRequest: {
-            method: "GET",
-            path: "/api/movies",
-          },
-          willRespondWith: {
-            status: 200,
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: '[]',
-          },
-        }
-      )
-      .then(() =>
-        {
-          console.log('Interaction added');
-          done();
-        }
-        , done.fail)
-  });
-
   afterAll((done) => {
     jasmine.DEFAULT_TIMEOUT_INTERVAL = originalTimeout;
     provider.finalize().then(done, done.fail)
   });
 
-  it("has no movies", (done) => {
-    service.getMovies().subscribe(
-      movies => {
-        expect(movies).toEqual([]);
-        done();
-      }, error => {
-        done.fail(error);
-      }
-    );
+  describe('One or more movies', () => {
+    beforeEach((done) => {
+      TestBed.configureTestingModule({
+        imports: [HttpClientModule],
+        providers: [
+          mockProvider(ConfigService, {
+            apiBaseUrl: 'http://localhost:1234/api'
+          }),
+          BackendService
+        ]
+      });
+      service = TestBed.inject(BackendService);
+      var exampleMovie = new Movie("a", "b");
+      provider
+        .addInteraction(
+          {
+            state: "There are one or more movies",
+            uponReceiving: "a request to list the movies",
+            withRequest: {
+              method: "GET",
+              path: "/api/movies",
+            },
+            willRespondWith: {
+              status: 200,
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: eachLike(exampleMovie),
+            },
+          }
+        )
+        .then(() => {
+          console.log('Interaction added');
+          done();
+        }
+          , done.fail)
+    });
+
+    it("has one or more movies", (done) => {
+      service.getMovies().subscribe(
+        movies => {
+          expect(movies.length).toBeGreaterThan(0);
+          done();
+        }, error => {
+          done.fail(error);
+        }
+      );
+    });
   });
 });
 ~~~
