--- a/content/en/docs/WIP/2021-08 Bootcamp archive/010. Angular SPA/030. Fake the backend.md
+++ b/content/en/docs/WIP/2021-08 Bootcamp archive/010. Angular SPA/030. Fake the backend.md
@@ -69,7 +69,7 @@ module.exports = async function (context, req) {
 }
 ~~~
 
-### Expose to workblow
+### Expose to workflow
 
 Rename `./api/` to `./fake-backend/`
 
